# inky-display

./: .gitignore  Cargo.toml  flake.nix  input.css  tailwind.config.js
src/: comm.rs  error.rs  frame.rs  lib.rs  main.rs  page.rs  render.rs  wrap.rs
src/controller/: epd.rs  inky.rs  mod.rs  palette.rs  space.rs
src/data_sources/: football.rs  mod.rs  tube.rs  weather.rs
templates/: _layout.html  dashboard.html  page.html  text.html
