[package]
name = "inky-display"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
askama = "0.14"
axum = {version = "0.8.1", features = ["macros"]}
headless_chrome = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
