[package]
name = "inky_display"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
askama = "0.14"
axum = {version = "0.8.1", features = ["macros"]}
byteorder = "1.5"
gpio-cdev = "0.6"
headless_chrome = "1.0"
i2cdev = "0.5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
reqwest = { version = "0.12.23", default-features = false }
serde = { version = "1.0", features = ["derive"] }
spidev = "0.5"  
thiserror = "2.0.16"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

