[package]
name = "inky_display"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
askama = "0.15"
axum = {version = "0.8", features = ["macros"]}
byteorder = "1.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
gpio-cdev = "0.6"
headless_chrome = "1.0"
i2cdev = "0.6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
spidev = "0.7"  
thiserror = "2.0"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

